Mostly typos and quick fixes