@@ -33,7 +33,7 @@ public class ParamsHelper {
         Map<String, Collection<String>> params;
         if (exchange.getRequestHeaders().containsKey("Content-Type")
                 && exchange.getRequestHeaders().get("Content-Type").size() == 1
-                && exchange.getRequestHeaders().get("Content-Type").get(0).startsWith(MimeType.FORM.mimeType())) {
+                && exchange.getRequestHeaders().get("Content-Type").getFirst().startsWith(MimeType.FORM.mimeType())) {
 
             try (var reader = new BufferedReader(new InputStreamReader(exchange.getRequestBody()))) {
                 String result = reader.lines().collect(Collectors.joining("\n"));
@@ -51,7 +51,7 @@ public class ParamsHelper {
 
     /**
      * @param param A collection of String
-     * @return the first non empty, non blank value of the list, or empty
+     * @return the first non-empty, non-blank value of the list, or empty
      */
     public static Optional<String> singleParam(Collection<String> param){
         if(param == null ||param.isEmpty())
@@ -65,7 +65,7 @@ public class ParamsHelper {
 
     /**
      * @param spaceSeparatedList A string containing several space separated values (eg "one two three")
-     * @return A list of all non blank non empty values, in order they were found in the source string
+     * @return A list of all non-blank non-empty values, in order they were found in the source string
      */
     public static List<String> spaceSeparatedList(String spaceSeparatedList){
 
